force-app/main/default/objects/OrderItem/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>zRemove Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Products (Account)</relationshipLabel>
    <relationshipName>OrderProducts1</relationshipName>
    <type>Lookup</type>
</CustomField>