force-app/main/default/objects/OrderItem/fields/AccountSubsidiary__c.field-meta.xml
<CustomField>
    <fullName>AccountSubsidiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Subsidiary</label>
    <referenceTo>AccountSubsidiary__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>