force-app/main/default/objects/OrderItem/fields/AccountSubsidiaryName__c.field-meta.xml
<CustomField>
    <fullName>AccountSubsidiaryName__c</fullName>
    <formula>AccountSubsidiary__r.AccountSubsidiary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Subsidiary Name</label>
    <type>Text</type>
</CustomField>