force-app/main/default/objects/OrderItem/fields/AssetIdValidate__c.field-meta.xml
<CustomField>
    <fullName>AssetIdValidate__c</fullName>
    <label>Asset Id Validate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>