force-app/main/default/objects/OrderItem/fields/BillToAddress__c.field-meta.xml
<CustomField>
    <fullName>BillToAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill-To Address</label>
    <referenceTo>ILAddress__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>