force-app/main/default/objects/OrderItem/fields/ComponentListPrice__c.field-meta.xml
<CustomField>
    <fullName>ComponentListPrice__c</fullName>
    <label>Adjusted List Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>