force-app/main/default/objects/OrderItem/fields/ComponentQuantity__c.field-meta.xml
<CustomField>
    <fullName>ComponentQuantity__c</fullName>
    <label>Component Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>