force-app/main/default/objects/OrderItem/fields/ContractNumber__c.field-meta.xml
<CustomField>
    <fullName>ContractNumber__c</fullName>
    <label>ContractNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>