force-app/main/default/objects/OrderItem/fields/CorrectionOrderLineID__c.field-meta.xml
<CustomField>
    <fullName>CorrectionOrderLineID__c</fullName>
    <label>Correction Order Line ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>