force-app/main/default/objects/OrderItem/fields/CustomerReference__c.field-meta.xml
<CustomField>
    <fullName>CustomerReference__c</fullName>
    <label>Order Item Reference</label>
    <type>TextArea</type>
</CustomField>