force-app/main/default/objects/OrderItem/fields/DeliveryChoice__c.field-meta.xml
<CustomField>
    <fullName>DeliveryChoice__c</fullName>
    <label>Delivery Choice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partial deliveries</fullName>
            </value>
            <value>
                <fullName>Full delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>