force-app/main/default/objects/OrderItem/fields/DeliveryType__c.field-meta.xml
<CustomField>
    <fullName>DeliveryType__c</fullName>
    <label>Delivery Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deliver available stock</fullName>
                <default>true</default>
                <label>Deliver available stock</label>
            </value>
            <value>
                <fullName>Wait for full delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>