force-app/main/default/objects/OrderItem/fields/DigitalActivationEMail__c.field-meta.xml
<CustomField>
    <fullName>DigitalActivationEMail__c</fullName>
    <label>Digital Activation Email</label>
    <type>Email</type>
</CustomField>