force-app/main/default/objects/OrderItem/fields/DiscountedPrice__c.field-meta.xml
<CustomField>
    <fullName>DiscountedPrice__c</fullName>
    <formula>IF( TEXT(Product2.Type__c) != &apos;Item Group&apos;,ROUND(NetsuiteListPrice__c - (NetsuiteListPrice__c * List_Price_Rate__c ),2),0 )</formula>
    <inlineHelpText>Excluding VAT, shows the List Price minus Structured Discounts</inlineHelpText>
    <label>Discounted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>