force-app/main/default/objects/OrderItem/fields/DiscountedPriceEcommerce__c.field-meta.xml
<CustomField>
    <fullName>DiscountedPriceEcommerce__c</fullName>
    <label>zRemove Discounted Price Ecommerce</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>