force-app/main/default/objects/OrderItem/fields/DiscountedPriceItemGroup__c.field-meta.xml
<CustomField>
    <fullName>DiscountedPriceItemGroup__c</fullName>
    <label>Discounted Price Item Group</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>