force-app/main/default/objects/OrderItem/fields/DiscountPercentage__c.field-meta.xml
<CustomField>
    <fullName>DiscountPercentage__c</fullName>
    <description>Discount Percentage to be integrated to NetSuite</description>
    <formula>IF(AND(OR(List_Price_Rate__c = 0,ISBLANK(List_Price_Rate__c)),ManualDiscountPercent__c &gt; 0),ManualDiscountPercent__c,
			IF(AND(List_Price_Rate__c &gt; 0,OR(ManualDiscountValue__c = 0,ISBLANK(ManualDiscountValue__c)),OR(ManualDiscountPercent__c = 0,ISBLANK(ManualDiscountPercent__c))),List_Price_Rate__c,
						Discount__c / NetsuiteListPrice__c))*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>