force-app/main/default/objects/OrderItem/fields/DoNotInvoice__c.field-meta.xml
<CustomField>
    <fullName>DoNotInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Records whether normal invoicing will occur or by exception.</description>
    <inlineHelpText>When checked this orderline will not be invoiced through normal processing. Instead it will be listed separately and invoiced manually or by exception.</inlineHelpText>
    <label>Do Not Invoice</label>
    <type>Checkbox</type>
</CustomField>