force-app/main/default/objects/OrderItem/fields/ExternalCustomerId__c.field-meta.xml
<CustomField>
    <fullName>ExternalCustomerId__c</fullName>
    <formula>ShipToAccount__r.ExternalCustomerId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Customer Id</label>
    <type>Text</type>
</CustomField>