force-app/main/default/objects/OrderItem/fields/externalOrderId__c.field-meta.xml
<CustomField>
    <fullName>externalOrderId__c</fullName>
    <formula>Order.ExternalOrderId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>externalOrderId</label>
    <type>Text</type>
</CustomField>