force-app/main/default/objects/OrderItem/fields/ExternalShipToId__c.field-meta.xml
<CustomField>
    <fullName>ExternalShipToId__c</fullName>
    <formula>ShipToAccount__r.ExternalCustomerId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ExternalShipToId</label>
    <type>Text</type>
</CustomField>