force-app/main/default/objects/OrderItem/fields/FamilyType__c.field-meta.xml
<CustomField>
    <fullName>FamilyType__c</fullName>
    <label>Family type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>