force-app/main/default/objects/OrderItem/fields/FormGroupId__c.field-meta.xml
<CustomField>
    <fullName>FormGroupId__c</fullName>
    <label>FormGroupId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>