force-app/main/default/objects/OrderItem/fields/FullfillmentEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>FullfillmentEmailAddress__c</fullName>
    <label>Fullfillment Email Address</label>
    <type>Email</type>
</CustomField>