force-app/main/default/objects/OrderItem/fields/GroupExternalId__c.field-meta.xml
<CustomField>
    <fullName>GroupExternalId__c</fullName>
    <formula>ProductComponent__r.MainProduct__r.ExternalId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GroupExternalId</label>
    <type>Text</type>
</CustomField>