force-app/main/default/objects/OrderItem/fields/Hfdstructuur__c.field-meta.xml
<CustomField>
    <fullName>Hfdstructuur__c</fullName>
    <label>Hfdstructuur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Hfdstructuur</valueSetName>
    </valueSet>
</CustomField>