force-app/main/default/objects/OrderItem/fields/ImportItemGroupEAN__c.field-meta.xml
<CustomField>
    <fullName>ImportItemGroupEAN__c</fullName>
    <label>Import Item Group EAN</label>
    <length>56</length>
    <type>Text</type>
</CustomField>