force-app/main/default/objects/OrderItem/fields/InsertProductSelector__c.field-meta.xml
<CustomField>
    <fullName>InsertProductSelector__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InsertProductSelector</label>
    <type>Checkbox</type>
</CustomField>