force-app/main/default/objects/OrderItem/fields/InternalNote__c.field-meta.xml
<CustomField>
    <fullName>InternalNote__c</fullName>
    <description>Internal note for employees of Infinitas to clarify things of this particular item.</description>
    <inlineHelpText>Used for internal notes. Not transferred to customer and Invoices.</inlineHelpText>
    <label>Internal Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>