force-app/main/default/objects/OrderItem/fields/InvoiceNote__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNote__c</fullName>
    <description>Field for communication to the customer via Invoices.</description>
    <inlineHelpText>Text here will appear on the Invoice.</inlineHelpText>
    <label>Invoice Note (TBDeleted)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>