force-app/main/default/objects/OrderItem/fields/IsInspectionCopyOrderPossible__c.field-meta.xml
<CustomField>
    <fullName>IsInspectionCopyOrderPossible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsInspectionCopyOrderPossible</label>
    <type>Checkbox</type>
</CustomField>