force-app/main/default/objects/OrderItem/fields/IsPricebookInformat__c.field-meta.xml
<CustomField>
    <fullName>IsPricebookInformat__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the pricebook an Informat Pricebook or not. If Yes then TRUE, If No then FALSE</description>
    <label>Is Pricebook Informat</label>
    <type>Checkbox</type>
</CustomField>