force-app/main/default/objects/OrderItem/fields/IsRegularOrderPossible__c.field-meta.xml
<CustomField>
    <fullName>IsRegularOrderPossible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRegularOrderPossible</label>
    <type>Checkbox</type>
</CustomField>