force-app/main/default/objects/OrderItem/fields/IsUseCopyOrderPossible__c.field-meta.xml
<CustomField>
    <fullName>IsUseCopyOrderPossible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsUseCopyOrderPossible</label>
    <type>Checkbox</type>
</CustomField>