force-app/main/default/objects/OrderItem/fields/ItemAndItemGroupIntegration__c.field-meta.xml
<CustomField>
    <fullName>ItemAndItemGroupIntegration__c</fullName>
    <formula>IF(NOT(ISBLANK(ItemGroup__c)),ItemGroup__r.Id,Id)</formula>
    <label>Item and Item Group Integration</label>
    <type>Text</type>
</CustomField>