force-app/main/default/objects/OrderItem/fields/ItemGroup__c.field-meta.xml
<CustomField>
    <fullName>ItemGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Current Product is part of an Item Group</inlineHelpText>
    <label>Item Group</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>