force-app/main/default/objects/OrderItem/fields/ItemGroupId__c.field-meta.xml
<CustomField>
    <fullName>ItemGroupId__c</fullName>
    <label>ItemGroup Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>