force-app/main/default/objects/OrderItem/fields/ItemGroupName__c.field-meta.xml
<CustomField>
    <fullName>ItemGroupName__c</fullName>
    <formula>hyperlink(ItemGroup__r.Id,ItemGroup__r.ProductName__c,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Group Name</label>
    <type>Text</type>
</CustomField>