force-app/main/default/objects/OrderItem/fields/ItemSubtype__c.field-meta.xml
<CustomField>
    <fullName>ItemSubtype__c</fullName>
    <description>Field that copies over the value of Item Subtype on the Product2 level. Field is for NH Zorg to help indicating they have started a consultancy project for this order in an external system (Monday)</description>
    <formula>TEXT(Product2.ItemSubtype__c)</formula>
    <label>Item Subtype</label>
    <type>Text</type>
</CustomField>