force-app/main/default/objects/OrderItem/fields/ItemSubtypeConsultancyCheck__c.field-meta.xml
<CustomField>
    <fullName>ItemSubtypeConsultancyCheck__c</fullName>
    <description>Field that checks when Item Subtype is &apos;Consultancy Hours&apos; (only for NH Professional)  they have checked the box Consultancy Project Started on Order level.</description>
    <formula>IF( 
AND(
ItemSubtype__c = &apos;Consultancy Hours&apos;,  
Order.ConsultancyProjectStarted__c =false,
CONTAINS(PricebookName__c, &quot;Professional&quot;) 
), 
1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Subtype Consultancy Check</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>