force-app/main/default/objects/OrderItem/fields/LicenseDuration__c.field-meta.xml
<CustomField>
    <fullName>LicenseDuration__c</fullName>
    <formula>if( AND(NOT(ISNULL(StartDate__c)),NOT(ISNULL(EndDate))), (MONTH(EndDate) + (12*(YEAR(EndDate)-YEAR(StartDate__c))) - MONTH(StartDate__c)) + 
			(IF(AND(DAY(EndDate) &gt; DAY(StartDate__c)),1,0)),
				value(text(Product2.LicenseDuration__c)))
				/*
				MCEILING((EndDate - StartDate__c)/30),
			
			*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>