force-app/main/default/objects/OrderItem/fields/LineItemTotal__c.field-meta.xml
<CustomField>
    <fullName>LineItemTotal__c</fullName>
    <formula>Quantity * UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Excluding VAT</inlineHelpText>
    <label>Line Item Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>