force-app/main/default/objects/OrderItem/fields/List_Price_Rate__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Rate__c</fullName>
    <formula>ListPriceDiscount__r.Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>