force-app/main/default/objects/OrderItem/fields/ListPriceDiscount__c.field-meta.xml
<CustomField>
    <fullName>ListPriceDiscount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>List Price Discount</label>
    <referenceTo>ListPriceDiscount__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>