force-app/main/default/objects/OrderItem/fields/ListPriceDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>ListPriceDiscountAmount__c</fullName>
    <label>List Price Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>