force-app/main/default/objects/OrderItem/fields/ListPriceDiscountRate__c.field-meta.xml
<CustomField>
    <fullName>ListPriceDiscountRate__c</fullName>
    <label>List Price Discount Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>