force-app/main/default/objects/OrderItem/fields/ListPriceDiscountType__c.field-meta.xml
<CustomField>
    <fullName>ListPriceDiscountType__c</fullName>
    <formula>TEXT(ListPriceDiscount__r.ProductDiscountGroup__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price Discount Type</label>
    <type>Text</type>
</CustomField>