force-app/main/default/objects/OrderItem/fields/MultiShipAddressRollingCount__c.field-meta.xml
<CustomField>
    <fullName>MultiShipAddressRollingCount__c</fullName>
    <label>Multi ShipAddress Rolling Count</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>