force-app/main/default/objects/OrderItem/fields/MultiShiptoInventoryRollingCount__c.field-meta.xml
<CustomField>
    <fullName>MultiShiptoInventoryRollingCount__c</fullName>
    <label>Multi Shipto Inventory Rolling Count</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>