force-app/main/default/objects/OrderItem/fields/NetSalesPriceItemGroup__c.field-meta.xml
<CustomField>
    <fullName>NetSalesPriceItemGroup__c</fullName>
    <label>Net Sales Price Item Group</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>