force-app/main/default/objects/OrderItem/fields/NetSuiteIdBilltoAccount__c.field-meta.xml
<CustomField>
    <fullName>NetSuiteIdBilltoAccount__c</fullName>
    <label>NetSuiteId Bill to Account</label>
    <length>56</length>
    <type>Text</type>
</CustomField>