force-app/main/default/objects/OrderItem/fields/NetSuiteIdShiptoAccount__c.field-meta.xml
<CustomField>
    <fullName>NetSuiteIdShiptoAccount__c</fullName>
    <label>NetSuiteId Ship to Account</label>
    <length>56</length>
    <type>Text</type>
</CustomField>