force-app/main/default/objects/OrderItem/fields/NetsuiteInternalId__c.field-meta.xml
<CustomField>
    <fullName>NetsuiteInternalId__c</fullName>
    <label>NetSuiteId Account Subsidiary</label>
    <length>56</length>
    <type>Text</type>
</CustomField>