force-app/main/default/objects/OrderItem/fields/NetsuiteListPrice__c.field-meta.xml
<CustomField>
    <fullName>NetsuiteListPrice__c</fullName>
    <formula>IF(AND(ComponentListPrice__c&lt;&gt;ListPrice,NOT(ISNULL(ComponentListPrice__c)),ComponentListPrice__c&gt;=0), ComponentListPrice__c, ListPrice)
/*
IF(AND(ISPICKVAL(OrderLineType__c, &apos;Transfer&apos;), ComponentListPrice__c=0), ComponentListPrice__c, 
IF(ComponentListPrice__c&gt;0, ComponentListPrice__c, ListPrice))*/</formula>
    <label>Netsuite List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>