force-app/main/default/objects/OrderItem/fields/NetsuiteQuantity__c.field-meta.xml
<CustomField>
    <fullName>NetsuiteQuantity__c</fullName>
    <label>Netsuite Quantity</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>