force-app/main/default/objects/OrderItem/fields/OrderByCustomer__c.field-meta.xml
<CustomField>
    <fullName>OrderByCustomer__c</fullName>
    <formula>Order.Account.CustomerNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order By Customer</label>
    <type>Text</type>
</CustomField>