force-app/main/default/objects/OrderItem/fields/OrderImportLineTotal__c.field-meta.xml
<CustomField>
    <fullName>OrderImportLineTotal__c</fullName>
    <description>This field stores the total price of the product (price*quantity) received  from integration on the Import Order record for an Order Product</description>
    <label>Order Import Line Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>