force-app/main/default/objects/OrderItem/fields/orderImportNumber__c.field-meta.xml
<CustomField>
    <fullName>orderImportNumber__c</fullName>
    <inlineHelpText>This shows the record has been created from the order import Object.</inlineHelpText>
    <label>OrderImportNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>