force-app/main/default/objects/OrderItem/fields/OrderImportVAT__c.field-meta.xml
<CustomField>
    <fullName>OrderImportVAT__c</fullName>
    <description>VAT received from eCommerce/Integration</description>
    <label>Order Import VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>