force-app/main/default/objects/OrderItem/fields/OrderItemEndDate__c.field-meta.xml
<CustomField>
    <fullName>OrderItemEndDate__c</fullName>
    <label>Order Item End Date</label>
    <type>Date</type>
</CustomField>