force-app/main/default/objects/OrderItem/fields/OrderLineItemType__c.field-meta.xml
<CustomField>
    <fullName>OrderLineItemType__c</fullName>
    <label>Order Line Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Scrap</fullName>
            </value>
            <value>
                <fullName>Free</fullName>
            </value>
            <value>
                <fullName>--None--</fullName>
            </value>
            <value>
                <fullName>Inspection Copy</fullName>
            </value>
            <value>
                <fullName>Use Copy</fullName>
            </value>
            <value>
                <fullName>Service Order</fullName>
                <isActive>false</isActive>
                <label>Service Order</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>