force-app/main/default/objects/OrderItem/fields/OrderMultipleShippingLocations__c.field-meta.xml
<CustomField>
    <fullName>OrderMultipleShippingLocations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Multiple Shipping Locations</label>
    <type>Checkbox</type>
</CustomField>