force-app/main/default/objects/OrderItem/fields/OrderSource__c.field-meta.xml
<CustomField>
    <fullName>OrderSource__c</fullName>
    <label>Order Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>