force-app/main/default/objects/OrderItem/fields/OrderType__c.field-meta.xml
<CustomField>
    <fullName>OrderType__c</fullName>
    <label>Order Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>