force-app/main/default/objects/OrderItem/fields/PackingSlipName__c.field-meta.xml
<CustomField>
    <fullName>PackingSlipName__c</fullName>
    <formula>ShipToAccount__r.PackingSlipName__c</formula>
    <label>Packing Slip Name</label>
    <type>Text</type>
</CustomField>