force-app/main/default/objects/OrderItem/fields/ProductComponent__c.field-meta.xml
<CustomField>
    <fullName>ProductComponent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Component</label>
    <referenceTo>ProductComponent__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>OrderProducts</relationshipName>
    <type>Lookup</type>
</CustomField>