force-app/main/default/objects/OrderItem/fields/ProductComponentExternalId__c.field-meta.xml
<CustomField>
    <fullName>ProductComponentExternalId__c</fullName>
    <formula>ProductComponent__r.ExternalId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Component ExternalId</label>
    <type>Text</type>
</CustomField>