force-app/main/default/objects/OrderItem/fields/ProductEAN__c.field-meta.xml
<CustomField>
    <fullName>ProductEAN__c</fullName>
    <formula>Product2.EAN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product EAN</label>
    <type>Text</type>
</CustomField>