force-app/main/default/objects/OrderItem/fields/ProductHasFixedStartDate__c.field-meta.xml
<CustomField>
    <fullName>ProductHasFixedStartDate__c</fullName>
    <formula>NOT(ISNULL(Product2.FixedStartDate__c))</formula>
    <label>Product Has Fixed Start Date</label>
    <type>Checkbox</type>
</CustomField>