force-app/main/default/objects/OrderItem/fields/ProductIndexation__c.field-meta.xml
<CustomField>
    <fullName>ProductIndexation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Indexation</label>
    <type>Checkbox</type>
</CustomField>