force-app/main/default/objects/OrderItem/fields/ProductLicenseDuration__c.field-meta.xml
<CustomField>
    <fullName>ProductLicenseDuration__c</fullName>
    <label>Product License Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>