force-app/main/default/objects/OrderItem/fields/ProductMaxQuantity__c.field-meta.xml
<CustomField>
    <fullName>ProductMaxQuantity__c</fullName>
    <description>This field stores the quantity for the Product to be able to use in formula validation fields which is part of a roll-up summary on the Order to show errors and prevent Order Activation.</description>
    <label>Product MaxQuantity</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>