force-app/main/default/objects/OrderItem/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>Product Type</label>
    <length>56</length>
    <type>Text</type>
</CustomField>