force-app/main/default/objects/OrderItem/fields/ProductVAT__c.field-meta.xml
<CustomField>
    <fullName>ProductVAT__c</fullName>
    <formula>TEXT(Product2.VAT__c)</formula>
    <label>Product VAT</label>
    <type>Text</type>
</CustomField>