force-app/main/default/objects/OrderItem/fields/ProductWeight__c.field-meta.xml
<CustomField>
    <fullName>ProductWeight__c</fullName>
    <formula>Product2.Weight__c * Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>