force-app/main/default/objects/OrderItem/fields/ProRataMonths__c.field-meta.xml
<CustomField>
    <fullName>ProRataMonths__c</fullName>
    <label>Pro Rata Months</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>