force-app/main/default/objects/OrderItem/fields/ProRataProduct__c.field-meta.xml
<CustomField>
    <fullName>ProRataProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a Pro Rata product that needs to be invoiced pro rata?</description>
    <inlineHelpText>Is this a Pro Rata product that needs to be invoiced pro rata?</inlineHelpText>
    <label>Pro Rata Product</label>
    <type>Checkbox</type>
</CustomField>