force-app/main/default/objects/OrderItem/fields/ProRataRate__c.field-meta.xml
<CustomField>
    <fullName>ProRataRate__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Pro Rata Rate</label>
    <precision>17</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>