force-app/main/default/objects/OrderItem/fields/ShippingAddressNote__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddressNote__c</fullName>
    <description>To be used as extra information on the shipping address for deliveries.</description>
    <inlineHelpText>To be used as extra information on the shipping address for deliveries.</inlineHelpText>
    <label>Shipping Address Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>